--- a/Ficha3/Ex4ficha3.html
+++ b/Ficha3/Ex4ficha3.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="js/script.js"></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <p onmouseover="toNegrito()" id="text">
-      Este programa permite demonstrar a utilização do javascript para modificar
-      a formatação de um dado elemento HTML, através da modificação da respetiva
+    <p ondblclick="toNegrito()" id="text">
+      Este <span class="negrito"> programa </span> permite demonstrar a
+      utilização do <span class="negrito"> javascript</span> para modificar a
+      <span class="negrito">formatação</span> de um dado elemento
+      <span class="negrito">HTML</span>, através da modificação da respetiva
       classe.
     </p>
   </body>
