--- a/Ficha3/Ex5Ficha3.html
+++ b/Ficha3/Ex5Ficha3.html
@@ -5,7 +5,9 @@
     <title>Carrinho de Compras</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery-3.3.1.slim.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/jquery-3.5.1.slim.min.js"></script>
+    <script src="js/script.js"></script>
   </head>
   <body>
     <div class="container">
@@ -18,7 +20,12 @@
           <input type="text" class="form-control" name="item" id="item" />
         </div>
         <div class="col-2">
-          <input type="button" class="btn btn-primary" value="Adicionar" />
+          <input
+            type="button"
+            class="btn btn-primary"
+            value="Adicionar"
+            onclick="listaa()"
+          />
         </div>
       </div>
       <div class="form-group row">
