--- a/Ficha4-Revisoes/Ficha4Ex8.html
+++ b/Ficha4-Revisoes/Ficha4Ex8.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery-3.3.1.slim.min.js"></script>
+    <script src="js/script.js"></script>
   </head>
   <body>
     <div class="container">
