--- a/teste/Teste Modulo5/Ex6.html
+++ b/teste/Teste Modulo5/Ex6.html
@@ -33,6 +33,7 @@
               type="button"
               class="btn btn-warning"
               id="btnPrint"
+              onclick="por()"
               value="Imprimir"
             />
           </div>
